--- a/Meditor/Info.plist
+++ b/Meditor/Info.plist
@@ -2,6 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>ATSApplicationFontsPath</key>
+	<string>MyriadPro-Bold.otf,MyriadPro-SemiBold.otf,MyriadPro-Regular.otf</string>
+	<key>CFBundleDisplayName</key>
+	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>MyriadPro-Regular.otf</string>
+		<string>MyriadPro-SemiBold.otf</string>
+		<string>MyriadPro-Bold.otf</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
