--- a/Meditor/Info.plist
+++ b/Meditor/Info.plist
@@ -2,20 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LSApplicationCategoryType</key>
-	<string></string>
 	<key>ATSApplicationFontsPath</key>
-	<string>MyriadPro-Bold.otf,MyriadPro-SemiBold.otf,MyriadPro-Regular.otf</string>
-	<key>CFBundleDisplayName</key>
 	<string></string>
-	<key>UIAppFonts</key>
-	<array>
-		<string>MyriadPro-Regular.otf</string>
-		<string>MyriadPro-SemiBold.otf</string>
-		<string>MyriadPro-Bold.otf</string>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>Meditor</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIconFile</key>
@@ -33,12 +25,20 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>3</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.productivity</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2015 Meditor. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>MyriadPro-Regular.otf</string>
+		<string>MyriadPro-SemiBold.otf</string>
+		<string>MyriadPro-Bold.otf</string>
+	</array>
 </dict>
 </plist>
